@@ -1,2 +1,2 @@
 ;; Do not edit this file generated by ./scripts/gen-free-vars-decl.scm.
-(define *free-vars-decl* '(number? cons car cdr null? set-car! set-cdr! sys-display rxmatch regexp? regexp->string rxmatch-start rxmatch-end rxmatch-after rxmatch-before rxmatch-substring make-string string-set! string-length string->symbol string->number string-append string-split number->string reverse eof-object? read-char char=? string? sys-getenv equal? open-string-input-port sys-open-output-string sys-port-seek open-output-file close-output-port digit->integer get-remaining-input-string sys-readdir file-exists? sys-get-output-string string->regexp char->integer integer->char format current-input-port current-output-port set-current-input-port! set-current-output-port! char? write gensym string=? vector? list? memq eq? member boolean? symbol->string string-ref error get-timeofday make-eq-hashtable hashtable-set! hashtable-ref hashtable-keys current-error-port values vm/apply pair? init-library-table map10 find10 make-custom-binary-input-port get-u8 bytevector-u8-set! transcoded-port utf-8-codec make-transcoder eof-object sys-open-bytevector-output-port sys-get-bytevector bytevector-length bytevector-u8-ref standard-input-port get-bytevector-n utf8->string open-file-output-port open-file-input-port close-input-port vector regexp-replace regexp-replace-all source-info errorf eval raise raise-continuable with-exception-handler make-vector-type vector-type? vector-type-data vector-type-instance-of? make-typed-vector typed-vector-get-nth typed-vector-set-nth typed-vector? typed-vector-type apply mod div assq exit macroexpand-1 memv procedure? load symbol? dynamic-wind char<=? char<? char>=? char>? read vector->list set-source-info!))
+(define *free-vars-decl* '(number? cons car cdr null? set-car! set-cdr! sys-display rxmatch regexp? regexp->string rxmatch-start rxmatch-end rxmatch-after rxmatch-before rxmatch-substring make-string string-set! string-length string->symbol string->number string-append string-split number->string reverse eof-object? read-char char=? string? sys-getenv equal? open-string-input-port sys-open-output-string sys-port-seek open-output-file close-output-port digit->integer get-remaining-input-string sys-readdir file-exists? sys-get-output-string string->regexp char->integer integer->char format current-input-port current-output-port set-current-input-port! set-current-output-port! char? write gensym string=? vector? list? memq eq? member boolean? symbol->string string-ref error get-timeofday make-eq-hashtable hashtable-set! hashtable-ref hashtable-keys current-error-port values vm/apply pair? init-library-table map10 find10 make-custom-binary-input-port get-u8 bytevector-u8-set! transcoded-port utf-8-codec make-transcoder eof-object sys-open-bytevector-output-port sys-get-bytevector bytevector-length bytevector-u8-ref standard-input-port get-bytevector-n utf8->string open-file-output-port open-file-input-port close-input-port vector regexp-replace regexp-replace-all source-info errorf eval raise raise-continuable with-exception-handler make-vector-type vector-type? vector-type-data vector-type-instance-of? make-typed-vector typed-vector-get-nth typed-vector-set-nth typed-vector? typed-vector-type apply mod div assq exit macroexpand-1 memv procedure? load symbol? dynamic-wind char<=? char<? char>=? char>? read vector->list set-source-info! call-process))
