@@ -167,6 +167,7 @@ Object charLtPEx(Object args);
 Object readEx(Object args);
 Object vectorTolistEx(Object args);
 Object setSourceInfoEx(Object args);
+Object callProcessEx(Object args);
 
 int mod(int x, int y);
 int div(int x, int y);
