@@ -1,4 +1,11 @@
-(suma 4)
+(define (http-get url)
+  (call-process (format "wget ~a -O- -q" url)))
+
+(print (wget "http://livedoor.com"))
+(print 'done)
+;(write (call-process "hage"))
+
+;(suma 4)
 (exit)
 
 ;; (map print '(1 2 3 4))
